apps/homelab-web/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homelab-web
  labels:
    app.kubernetes.io/name: homelab-web
