apps/homelab-web/base/networkpolicy-allow-egress-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-homelab-api
  namespace: homelab-web
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: homelab-web
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: homelab-api
          podSelector:
            matchLabels:
              app.kubernetes.io/name: homelab-api
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 8000
